2007-10-03  Ethan Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (CGM_options): Remove spurious c_token++, which caused
	parsing to skip the font size in:  set term cgm "fontname" fontsize

2007-10-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/binary.c src/binary.h src/bf_test.c: Rename the routine vector()
	to alloc_vector().  This avoids a conflict with the "vector" keyword on
	PowerPC OSX with Altivec compiler options enabled.
	Bug #1754164

2007-10-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (bound_intersect):  Fix a degenerate case in the
	intersection test that caused a divide by zero.
	Bug #1805697

2007-09-29  Hanno Hoffstadt  <hannoh@users.sourceforge.net>

	* term/Postscript/prologue.ps: Add an explicit 'closepath' before
	filling a rectangle. This is not required by the language spec, but
	works around a bug in Adobe Distiller 7 and Apple's Quartz Preview.
	Bug #1771533

2007-09-28  Ethan Merritt  <merritt@u.washington.edu>

	* demo/html/Makefile demo/html/index.save:
	Update to include latest demos

2007-09-28  Hanno Hoffstadt  <hannoh@users.sourceforge.net>

	* src/graphics.c (do_plot) src/graph3d.c (do_3dplot):  It is necessary
	to call term->previous_palette() at the end of any 2D plot or 3D plot
	that used custom rgb colors.
	Bug #1803337

2007-09-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c src/set.c(set_encoding) src/show.c(show_encoding)
	src/gplt_x11.c:

	Add "utf8" to the list of options accepted by "set encoding".
	Modify "show encoding" to report the current environmental locale as
	well as the encoding that gnuplot thinks it is using. Resolving any
	conflict is left to the user.

	Most terminal drivers need take no special action if the encoding is
	UTF-8. PostScript is a major exception.  It is also useful for the
	libgd-based terminals if you want to force UTF-8 encoding lookup in
	the Adobe Symbol font. This patchset implements the command itself.